薯片剧情增加

--- a/逆天雇佣兵-决战时刻/重要人物 or 势力介绍/引渡人.md
+++ b/逆天雇佣兵-决战时刻/重要人物 or 势力介绍/引渡人.md
@@ -9,3 +9,9 @@
 第二次开元纪开始没多久，一位第一次开元纪残喘下来的强者，带着一个女婴闯入了梦之空间。他的来历梦之书并不知晓，梦之书自己本身也并不知道第一次开元纪的事情，当时的梦之书只能懵懂的感觉到他并没有恶意，他对梦之书说“我们都陷入一个轮回，我看到了这个轮回的最后，世间的万物都会归于虚无，不论是你和真神们，也包括我。我没有参与纪元战斗，我本没有资格再进入这片空间，但我认为我的避战是正确的，在纪元毁灭的时候，我看到了外面的世界。在那一刻，我明白了，如果想结束这场战斗，我必须出去，但这个孩子我带不出去，我本想交予真神们抚养，因为我没有脸面来面对你，所以我在静等真神们的复苏甚至不惜封印了她的生命，但我等够了，我已经等了1000多年，你已经苏醒了，但真神们还在沉睡，我不能再等了，我必须离开了。”
 梦之书刚想拦住他说些什么，他已经消失在这片空间，乃至整个世界之中。  
 于是，这个女婴就在梦之空间开始成长了起来，随着时间的推移，梦之书开始渐渐地想起了自己的职责，他又如第一纪元一般开始收集强者们的记忆，在女婴的帮助下，梦之书的势力以梦工厂的名义出现在一个又一个具有智慧生命的世界。有的人说，当你在梦中看到一个圣洁的女神指引你飞上天堂的时候，那并不是羞涩少年的春梦，而是你被梦的使者选中，这位梦的使者被所有人称为——引渡人。
+
+### 重要事件
+#### 接引
+#### 指引加护
+#### 加护强化
+#### 梦之书洗礼
