--- a/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/真神形态.md
@@ -6,6 +6,7 @@
 
 #### 天赋技能:
 闪电之灵->
+山丘之王凝聚从自己体内发散出的闪电之力，以这种独特的手段对敌人不断地造成伤害。
 一次性召唤出2个可操控的闪电之灵,闪电之灵不可被攻击和伤害,你可以通过闪电之灵对敌人造成伤害.闪电之灵的攻击间隔为1.0次/s
 闪电之灵持续时间:30s,技能CD:30s
 
