--- a/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/深渊形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/深渊形态.md
@@ -1,40 +1,40 @@
 # 精灵游侠
-## 梦之书形态
+## 深渊形态
 ### 能力背景
-将梦之书的能量融入精灵的箭术后,精灵游侠对整个箭道有了完全不一样的领悟.
+被深渊邪力侵袭的精灵射手,深渊邪力与精灵之力激荡在一次形成了一种全新的力量似黑暗又似亡灵.
 ### 技能
 
 #### 模型:dota白色血法
 没办法了,真找不到了.
 
 #### 天赋技能:
-幻击->
-将梦之魔力融入每次攻击之中,让每次攻击都有着恐怖的破坏力.
-造成任意攻击伤害都会附加额外的伤害.
+黑暗之箭->
+奇异的力量融入弓箭之中,让被命中的敌人受到深层次的侵蚀.
+每次攻击会为目标增加一层暗黑印记每层印记会降低目标20+(20%等级加成)点护甲,最多叠加10层,目标具有10层印记时你对其的伤害会无视其20%的护甲.
 
 #### 5级技能
-凌波微步->
-融入梦之魔力精灵舞步有着别样的奇异魔力,那虚无缥缈的步伐让所有人都难以捕捉到她的一切.
-被动:增加自身3点敏捷成长和15%的闪避几率
-主动:主动使用在10s内进入虚影状态,在此期间获得20%的伤害抗性和15%的闪避几率.
+黑暗穿梭->
+以黑暗之力作为媒介穿梭在一切空间之中.
+主动:立刻移动到1200码内任意位置,并且可以在穿梭点召唤一个能够造成50%伤害承受125%伤害的镜像
 
 #### 10级技能
-森之领域->
-以梦之魔力架构的虚拟领域能够为自己和友军提供强大的庇护.
-提升周围友军25点护甲和30%的抗性.
+黑暗侵蚀->
+将黑暗之力外放,侵蚀敌人的状态.
+降低周围敌人护甲和抗性.
 
 #### 25级技能
-玄玉手->
-一种全新的能量使用手段,每次射出一道箭矢会存储一部分能量当能量足够后会向前方射出一道聚变后的强力能量箭矢.
-提升自身45%的攻击力并且每攻击4次会向前方发射一条强大的魔法箭矢对沿途敌人造成巨量的伤害,被命中的敌人会被降低15%的护甲持续3s.
+幽冥震击->
+将巨量的黑暗之力凝聚在一起呼唤出邪神罗睺的身姿让周围敌人感受恐惧.
+召唤出罗睺虚影踩踏周围敌人对敌人造成伤害,并且立刻将敌人的黑暗之箭提升至10层,已经处于10层的敌人会受到额外200%的伤害.
 
 #### 40级技能
-镜花水月->
-从镜子中走出的人不被世界影响也无法影响世界.
-分化出一个只受10%伤害的分身,分身不具有伤害能力,但是你可以通过分身对敌人造成伤害.
+黑暗侵袭->
+在黑暗中陨落的敌人都将成为让你变得更加强大的原料.
+每击杀一个处于10层黑暗之力状态的单位你都会获得10点全属性,最多增加3000点全属性.
 
 #### 终极技能
-化虚为实->
-幻击-致命:提升幻击的伤害
-森之领域-生命祝福:提升周围友军5%的生命恢复速度并且不受重伤效果影响.
-镜花水月-虚实相合:分化出一个只受5%伤害的分身,并且分身具有本尊100%的攻击,分身造成的伤害会转化为本尊造成的伤害.
+黑暗燃烧->
+提升黑暗之箭可以叠加的层数为20层.
+幽冥震击伤害增加,20层
+黑暗侵袭层数提升200层
+主动使用消耗150层黑暗侵袭,短暂的提升自己各项能力,值待定
