精灵和专属

--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/基本形态.md
@@ -31,3 +31,11 @@
 分身-吸收:吸收一个指定的分身,暂时性的增强自身的能力.
 强击光环-剑域:为周围友军提升200%的攻击力
 剑刃风暴-闪电:更帅了,但没什么作用.
+
+#### 专属武器
+天丛云
+攻击力+10000
+全属性+2500
+敏捷+5000
+攻击有几召唤虚影释放剑刃风暴
+天劈附加300%敏捷加成点真实伤害,并且获得面板暴击几率加成.
