--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/梦之书形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/梦之书形态.md
@@ -31,3 +31,11 @@
 心眼-洞察:暴击时或者闪避时可以对敌人附加(80%敏捷加成)的真实伤害
 波动剑术-风:在原地召唤一个虚影释放剑刃风暴.
 波动剑术-御:在自己身边召唤一个防护罩提升自身60%的抗性,持续3s.
+
+#### 专属武器
+究极波动剑
+攻击力+10000
+全属性+2500
+敏捷+5000
+波动剑的多种效果可以同时触发
+心眼洞察-附加的伤害获得暴击率和闪避率加成.
