--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/深渊形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/深渊形态.md
@@ -29,3 +29,10 @@
 嗜血契约-提前预支:每次释放嗜血契约将不会损耗生命值,并且增加的抗性提升至30%,吸血提升至3%
 毁灭气息-法则:对毁灭气息影响的单位将会无视其20%的护甲,解除连续限定.
 嗜血连击-粉碎:嗜血连击将会对范围内单位造成伤害,并且每次调整会选择范围内随机单位调整.
+
+#### 专属武器
+极恶战斧
+攻击力+10000
+全属性+2500
+敏捷+5000
+真实伤害增加.
