--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/真神形态.md
@@ -29,3 +29,11 @@
 受到致死伤害时会激活该状态,获得50%的伤害增加,并且获得持续10s的疯魔咆哮效果.
 内置CD:90s
 血腥愤怒:每次受到伤害则提升自身5%的伤害增加,最多叠加10层.
+
+
+#### 专属武器
+阎魔刀
+攻击力+10000
+全属性+2500
+敏捷+5000
+邪恶苏生:邪恶之魂附体让你在这段时间中双抗增加50%,真实伤害会得到面板伤害加深的加成.
