--- a/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/基本形态.md
@@ -26,4 +26,11 @@
 #### 终极技能
 冲锋个锤子->
 向前方投掷出一个雷神之锤,对沿途的单位造成魔法伤害,并且眩晕一定的时间.
-被动:超级充能 多次释放技能充能次数可以存储,并且会在下一次造成攻击伤害时进行累加,同时眩晕时间也会进行一定的延长.
+被动:超级充能 多次释放技能充能次数可以存储,并且会在下一次造成攻击伤害时进行累加,同时眩晕时间也会进行一定的延长. 
+
+#### 专属武器
+电锲
+攻击力+10000
+全属性+2500
+力量+5000
+多重施法次数增加2次,部分技能伤害增加
