--- a/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/梦之书形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/梦之书形态.md
@@ -37,3 +37,11 @@
 圣灵厌恶->对敌人降低50%的输出
 圣击->神圣的电击造成伤害增加
 神圣审判-神明降临->同一时间的电击数量会增多,并且持续时间延长.
+
+#### 专属武器
+惩击者
+攻击力+10000
+全属性+2500
+力量+5000
+神圣审判的免死次数增加.
+审判雷狱的反伤伤害增加
