--- a/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/真神形态.md
@@ -38,3 +38,11 @@
 雷电之源->
 每两秒会消耗魔法值召唤一道天雷对范围内敌人造成伤害,并且会恢复自身以损失魔法值的10%.
 闪电之灵持续时间增加10s,召唤数量+2
+
+
+#### 专属武器
+雷神之鞭
+攻击力+10000
+全属性+2500
+力量+5000
+闪电之灵召唤数量+4,闪电之灵造成的伤害会有20%转化为真实伤害.
