--- a/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/基本形态.md
@@ -34,8 +34,15 @@
 #### 终极技能
 冷月->
 高傲与优雅是刻在骨子里的事情，优秀的精灵会知道如何用自己的能力去让敌人处于何种状态.
-每次攻击都会赋予敌人当前状态.
+每次攻击都会赋予敌人当前状态. 
 自卑:降低单位15%伤害加成和10%的防御力
 蔑视:不会附加印记,但会提升自身50%的伤害加成和7%的破甲效果.
 愤怒:提升单位15%的伤害加成,但目标的防御力也会降低20%同时单位闪避能力降低75%.
 爱慕:攻击只有7%的几率为目标附加该印记,拥有该印记的单位对精灵游侠的伤害会降低50%,精灵游侠对其的伤害会无视其20%的防御力,状态持续15s并且触发爱慕后将自动切换到蔑视状态并且60s之后才能再次切换至爱慕.
+
+#### 专属武器
+普通的长弓
+攻击力+10000
+全属性+2500
+敏捷+5000
+致命节奏所造成的伤害会有20%转化为真实伤害.
