--- a/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/梦之书形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/梦之书形态.md
@@ -38,3 +38,10 @@
 幻击-致命:提升幻击的伤害
 森之领域-生命祝福:提升周围友军5%的生命恢复速度并且不受重伤效果影响.
 镜花水月-虚实相合:分化出一个只受5%伤害的分身,并且分身具有本尊100%的攻击,分身造成的伤害会转化为本尊造成的伤害.
+
+#### 专属武器
+寒月弓
+攻击力+10000
+全属性+2500
+敏捷+5000
+任意伤害可以忽视目标300+15%点护甲
