--- a/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/基本形态.md
@@ -27,3 +27,11 @@
 血脉熔铸->
 血魔法师永久变身成为火凤凰,获得混乱攻击特性.
 凤凰火焰-多重:额外增加一道0.25s/次 的凤凰火焰
+
+#### 专属武器
+普通的石头
+攻击力+10000
+全属性+2500
+智力+5000
+灵魂吸引:复活时间减少8s
+灵魂之火:凤凰火焰造成的伤害会有20%转化为真实伤害.
