--- a/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/梦之书形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/梦之书形态.md
@@ -37,3 +37,10 @@
 你们的戏法是需要交租的，孩子们！
 任何单位释放技能都有25%的几率为你增加1点智力。
 释放技能有几率刷新所有技能
+
+#### 专属武器
+秘术法典
+攻击力+10000
+全属性+2500
+智力+5000
+魔法伤害会额外增加1倍,任意单位释放技能都有几率为你增加1-3点智力
