--- a/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/深渊形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/深渊形态.md
@@ -39,3 +39,10 @@
 魔炎吐息-强化，对被附加了九幽之火的单位真伤转化比增加。
 腐蚀之炎-强化，收到腐蚀之炎影响的单位会降低40%的护甲
 地狱幽冥-强化，凝聚出的九幽之球增多
+
+#### 专属武器
+幽冥晶石
+攻击力+10000
+全属性+2500
+智力+5000
+地狱幽冥召唤数量再次增多,球球造成伤害会附加真实伤害
