--- a/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/真神形态.md
@@ -35,3 +35,11 @@
 #### 终极技能
 爆裂之羽
 引爆所有凤凰之羽，对单位造成巨大的伤害，并且每一层凤凰之羽引爆后都会在目标区域形成小型的诅咒之地，让区域内的单位不断地受到天堕火箭的伤害。
+
+
+#### 专属武器
+梧桐古杖
+攻击力+10000
+全属性+2500
+智力+5000
+魔炎图腾造成的伤害增加,爆裂之羽引爆时会对单位附加真伤
