专属技能设置文本

--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/基本形态.md
@@ -39,3 +39,37 @@
 敏捷+5000
 攻击有几召唤虚影释放剑刃风暴
 天劈附加300%敏捷加成点真实伤害,并且获得面板暴击几率加成.
+
+
+#### 专属技能:
+##### Lv1 天丛云-残破之牙
+增加100点攻击力
+增加20点敏捷
+增加5%物理伤害
+
+##### Lv2 天丛云-打磨利刃
+增加2000点攻击力
+增加500点敏捷
+增加8%物理伤害
+
+##### Lv3 天丛云-残破之牙
+增加10000点攻击力
+增加1000点敏捷
+增加10%物理伤害
+
+##### Lv4 天丛云-残破之牙
+增加20000点攻击力
+增加1000点敏捷
+增加15%物理伤害
+获得技能:剑意风暴
+
+##### Lv5 天丛云-残破之牙
+增加60000点攻击力
+增加3000点敏捷
+增加15%物理伤害
+
+##### Lv6 天丛云-残破之牙
+增加100000点攻击力
+增加5000点敏捷
+增加20%物理伤害
+获得技能:神之惩击强化
