--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/梦之书形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/梦之书形态.md
@@ -39,3 +39,37 @@
 敏捷+5000
 波动剑的多种效果可以同时触发
 心眼洞察-附加的伤害获得暴击率和闪避率加成.
+
+
+#### 专属技能:
+##### Lv1 究极波动剑-残破之牙
+增加100点攻击力
+增加20点敏捷
+增加2%物理伤害,2%魔法伤害
+
+##### Lv2 究极波动剑-打磨利刃
+增加2000点攻击力
+增加500点敏捷
+增加4%物理伤害,4%魔法伤害
+
+##### Lv3 究极波动剑-残破之牙
+增加10000点攻击力
+增加1000点敏捷
+增加6%物理伤害,6%魔法伤害
+
+##### Lv4 究极波动剑-残破之牙
+增加20000点攻击力
+增加1000点敏捷
+增加8%物理伤害,8%魔法伤害
+获得技能:心之慧眼
+
+##### Lv5 究极波动剑-残破之牙
+增加60000点攻击力
+增加3000点敏捷
+增加10%物理伤害,10%魔法伤害
+
+##### Lv6 究极波动剑-残破之牙
+增加100000点攻击力
+增加5000点敏捷
+增加12%物理伤害,12%魔法伤害
+获得技能:究明剑术
