--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/深渊形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/深渊形态.md
@@ -36,3 +36,36 @@
 全属性+2500
 敏捷+5000
 真实伤害增加.
+
+
+#### 专属技能:
+##### Lv1 极恶战斧-残破之牙
+增加100点攻击力
+增加20点敏捷
+增加5%物理伤害
+
+##### Lv2 极恶战斧-打磨利刃
+增加2000点攻击力
+增加500点敏捷
+增加8%物理伤害
+
+##### Lv3 极恶战斧-残破之牙
+增加10000点攻击力
+增加1000点敏捷
+增加10%物理伤害
+
+##### Lv4 极恶战斧-残破之牙
+增加20000点攻击力
+增加1000点敏捷
+增加20%物理伤害
+
+##### Lv5 极恶战斧-残破之牙
+增加60000点攻击力
+增加3000点敏捷
+增加25%物理伤害
+
+##### Lv6 极恶战斧-残破之牙
+增加100000点攻击力
+增加5000点敏捷
+增加30%物理伤害
+获得技能:道则-毁灭
