--- a/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/基本形态.md
@@ -34,3 +34,39 @@
 全属性+2500
 力量+5000
 多重施法次数增加2次,部分技能伤害增加
+
+
+#### 专属技能:
+##### Lv1 电锲
+增加75点攻击力
+增加40点力量
+增加5%魔法伤害
+
+##### Lv2 电锲-打磨利刃
+增加1500点攻击力
+增加800点力量
+增加8%魔法伤害
+
+##### Lv3 电锲-残破之牙
+增加6000点攻击力
+增加2800点力量
+增加10%魔法伤害
+
+##### Lv4 电锲-残破之牙
+增加10000点攻击力
+增加6000点力量
+增加20%魔法伤害
+增加10%护甲穿透
+
+##### Lv5 电锲-残破之牙
+增加30000点攻击力
+增加10000点力量
+增加25%魔法伤害
+增加10%护甲穿透
+
+##### Lv6 电锲-残破之牙
+增加50000点攻击力
+增加18000点力量
+增加30%魔法伤害
+增加10%护甲穿透
+获得技能:电路联通
