--- a/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/真神形态.md
@@ -46,3 +46,41 @@
 全属性+2500
 力量+5000
 闪电之灵召唤数量+4,闪电之灵造成的伤害会有20%转化为真实伤害.
+
+
+#### 专属技能:
+##### Lv1 雷神之鞭
+增加80点攻击力
+增加40点力量
+增加5%魔法伤害
+
+##### Lv2 雷神之鞭-打磨利刃
+增加1500点攻击力
+增加800点力量
+增加8%魔法伤害
+
+##### Lv3 雷神之鞭-残破之牙
+增加6000点攻击力
+增加2800点力量
+增加10%魔法伤害
+
+##### Lv4 雷神之鞭-残破之牙
+增加10000点攻击力
+增加6000点力量
+增加15%魔法伤害
+增加10%护甲穿透
+获得技能:能量超载
+
+##### Lv5 雷神之鞭-残破之牙
+增加30000点攻击力
+增加10000点力量
+增加20%魔法伤害
+增加10%护甲穿透
+获得技能:能量超载
+
+##### Lv6 雷神之鞭-残破之牙
+增加50000点攻击力
+增加18000点力量
+增加25%魔法伤害
+增加10%护甲穿透
+获得技能:能量超载、能量转换
