--- a/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/梦之书形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/梦之书形态.md
@@ -44,3 +44,36 @@
 全属性+2500
 智力+5000
 魔法伤害会额外增加1倍,任意单位释放技能都有几率为你增加1-3点智力
+
+#### 专属技能:
+##### Lv1 秘术法典
+增加75点攻击力
+增加40点智力
+增加5%魔法伤害
+
+##### Lv2 秘术法典-打磨利刃
+增加1500点攻击力
+增加800点智力
+增加8%魔法伤害
+
+##### Lv3 秘术法典-残破之牙
+增加6000点攻击力
+增加2800点智力
+增加10%魔法伤害
+
+##### Lv4 秘术法典-残破之牙
+增加10000点攻击力
+增加6000点智力
+增加15%魔法伤害
+获得技能:极奥秘法
+
+##### Lv5 秘术法典-残破之牙
+增加30000点攻击力
+增加10000点智力
+增加20%魔法伤害
+
+##### Lv6 秘术法典-残破之牙
+增加50000点攻击力
+增加18000点智力
+增加25%魔法伤害
+获得技能:极奥秘法、奥数宝库
