--- a/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/真神形态.md
@@ -43,3 +43,38 @@
 全属性+2500
 智力+5000
 魔炎图腾造成的伤害增加,爆裂之羽引爆时会对单位附加真伤
+
+
+#### 专属技能:
+##### Lv1 梧桐古杖
+增加75点攻击力
+增加40点智力
+增加5%魔法伤害
+
+##### Lv2 梧桐古杖-打磨利刃
+增加1500点攻击力
+增加800点智力
+增加8%魔法伤害
+
+##### Lv3 梧桐古杖-残破之牙
+增加6000点攻击力
+增加2800点智力
+增加10%魔法伤害
+
+##### Lv4 梧桐古杖-残破之牙
+增加10000点攻击力
+增加6000点智力
+增加15%魔法伤害
+获得技能:灵魂之火
+
+##### Lv5 梧桐古杖-残破之牙
+增加30000点攻击力
+增加10000点智力
+增加20%魔法伤害
+获得技能:灵魂之火
+
+##### Lv6 梧桐古杖-残破之牙
+增加50000点攻击力
+增加18000点智力
+增加25%魔法伤害
+获得技能:灵魂之火、梧桐神火
