--- a/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/剑圣/真神形态.md
@@ -37,3 +37,37 @@
 全属性+2500
 敏捷+5000
 邪恶苏生:邪恶之魂附体让你在这段时间中双抗增加50%,真实伤害会得到面板伤害加深的加成.
+
+
+#### 专属技能:
+##### Lv1 阎魔刀-残破之牙
+增加100点攻击力
+增加20点敏捷
+增加5%物理伤害
+
+##### Lv2 阎魔刀-打磨利刃
+增加2000点攻击力
+增加500点敏捷
+增加8%物理伤害
+
+##### Lv3 阎魔刀-残破之牙
+增加10000点攻击力
+增加1000点敏捷
+增加10%物理伤害
+
+##### Lv4 阎魔刀-残破之牙
+增加20000点攻击力
+增加1000点敏捷
+增加20%物理伤害
+
+##### Lv5 阎魔刀-残破之牙
+增加60000点攻击力
+增加3000点敏捷
+增加25%物理伤害
+
+##### Lv6 阎魔刀-残破之牙
+增加100000点攻击力
+增加5000点敏捷
+增加30%物理伤害
+
+觉醒技能:邪恶苏生
