--- a/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/梦之书形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/山丘之王/梦之书形态.md
@@ -45,3 +45,39 @@
 力量+5000
 神圣审判的免死次数增加.
 审判雷狱的反伤伤害增加
+
+
+#### 专属技能:
+##### Lv1 惩罚者
+增加80点攻击力
+增加40点力量
+增加5%魔法伤害
+
+##### Lv2 惩罚者-打磨利刃
+增加1500点攻击力
+增加800点力量
+增加8%魔法伤害
+
+##### Lv3 惩罚者-残破之牙
+增加6000点攻击力
+增加2800点力量
+增加10%魔法伤害
+
+##### Lv4 惩罚者-残破之牙
+增加10000点攻击力
+增加6000点力量
+增加20%魔法伤害
+增加10%护甲穿透
+
+##### Lv5 惩罚者-残破之牙
+增加30000点攻击力
+增加10000点力量
+增加25%魔法伤害
+增加10%护甲穿透
+
+##### Lv6 惩罚者-残破之牙
+增加50000点攻击力
+增加18000点力量
+增加30%魔法伤害
+增加10%护甲穿透
+获得技能:审判之光
