--- a/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/血魔法师/基本形态.md
@@ -35,3 +35,35 @@
 智力+5000
 灵魂吸引:复活时间减少8s
 灵魂之火:凤凰火焰造成的伤害会有20%转化为真实伤害.
+
+#### 专属技能:
+##### Lv1 普通的宝石
+增加75点攻击力
+增加40点智力
+增加5%魔法伤害
+
+##### Lv2 普通的宝石-打磨利刃
+增加1500点攻击力
+增加800点智力
+增加8%魔法伤害
+
+##### Lv3 普通的宝石-残破之牙
+增加6000点攻击力
+增加2800点智力
+增加10%魔法伤害
+
+##### Lv4 普通的宝石-残破之牙
+增加10000点攻击力
+增加6000点智力
+增加20%魔法伤害
+
+##### Lv5 普通的宝石-残破之牙
+增加30000点攻击力
+增加10000点智力
+增加25%魔法伤害
+
+##### Lv6 普通的宝石-残破之牙
+增加50000点攻击力
+增加18000点智力
+增加30%魔法伤害
+获得技能:灵魂之火
