--- a/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/真神形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/精灵游侠/真神形态.md
@@ -43,3 +43,38 @@
 全属性+2500
 敏捷+5000
 陨落之星造成的伤害有30%转化为真实伤害.
+
+#### 专属技能:
+##### Lv1 皎月-残破之牙
+增加100点攻击力
+增加20点敏捷
+增加5%魔法伤害
+
+##### Lv2 皎月-打磨利刃
+增加2000点攻击力
+增加500点敏捷
+增加8%魔法伤害
+
+##### Lv3 皎月-残破之牙
+增加10000点攻击力
+增加1000点敏捷
+增加10%魔法伤害
+
+##### Lv4 皎月-残破之牙
+增加20000点攻击力
+增加1000点敏捷
+增加20%魔法伤害
+增加10%护甲穿透
+
+##### Lv5 皎月-残破之牙
+增加60000点攻击力
+增加3000点敏捷
+增加25%魔法伤害
+增加10%护甲穿透
+
+##### Lv6 皎月-残破之牙
+增加100000点攻击力
+增加5000点敏捷
+增加30%魔法伤害
+增加10%护甲穿透
+获得技能:月之祝福
