发生了什么？

--- a/逆天雇佣兵-决战时刻/英雄基础文本/零/基本形态.md
+++ b/逆天雇佣兵-决战时刻/英雄基础文本/零/基本形态.md
@@ -15,4 +15,15 @@ A+1技能：小范围伤害。
 A+2技能+1技能：小范围伤害+击退。  
 A+3技能+1技能：中范围伤害+心灵之火。  
 A+4技能+1技能：大范围伤害+大范围时停。  
-A+终极技能：单体持续终结伤害+对普通单位造成永久剥夺护甲类型和转变攻击类型为魔法伤害,对英雄单位暂时剥夺其攻击类型修改为魔法,并且减少其50%的双抗持续10秒  
+任意组合+终极技能：单体持续终结伤害+对普通单位造成永久剥夺护甲类型和转变攻击类型为魔法伤害,对英雄单位暂时剥夺其攻击类型修改为魔法,并且减少其50%的双抗持续10秒  
+
+A+1  
+A+2+1  
+这两个赋予敌人特殊状态,  
+A+3+1  
+A+4+1  
+这两个如果影响到了具有特殊状态的目标会有其他效果  
+A+3+1会抓取具有特殊状态的单位,并且对其造成额外伤害  
+A+4+1会如无敌斩一样对范围内单位进行斩击  
+
+最后一个组合+终极技能会释放空间撕裂
