--- a/逆天雇佣兵-决战时刻/重要人物 or 势力介绍/神圣法庭.md
+++ b/逆天雇佣兵-决战时刻/重要人物 or 势力介绍/神圣法庭.md
@@ -1,1 +1,22 @@
-我编不下去了，认真的
+# 神圣法庭
+
+### 世界地位介绍
+超然势力，由神庭之主阳殇一手建立的超然势力。相较于梦之书所采用的中央集权制和真神一组的分封制，神圣法庭更倾向于是君主立宪制，只是这位杰出的统治者有着不一般的实权在手中。
+在这位的领导下神圣法庭的版图也无比庞大，其内的人民唯一信奉的也只有那一部旷世巨作——神圣法典。法典不具有任何力量，但法典在这些领民的心目中却是绝对无可取代的。
+
+### 基本强者介绍
+神圣法庭等人都是与神庭之主治世意见相和或是通常是接受神庭之主的邀请成为客卿入住其中的。
+
+羽化尘：神庭的门面大使，主要掌管神庭海关事宜
+天：掌握有命运之力的客卿
+子.：善于制作法器的客卿
+癫仙：神秘的客卿，参与有神庭底层武装兵器——外附魂翼制造的存在。
+青羽洛：掌握有神秘轮回之力
+桃zi：神庭驻梦之书外交大使，当前常驻梦之书，负责梦之书的外交任务。
+三角加速同调：神庭的锻造大师
+
+
+### 超然势力关系网络
+
+- 梦之书：友好
+- 真神：友好
