--- a/逆天雇佣兵-决战时刻/重要人物 or 势力介绍/真神/精灵王.md
+++ b/逆天雇佣兵-决战时刻/重要人物 or 势力介绍/真神/精灵王.md
@@ -1,9 +1,15 @@
 # 人物:精灵王
 
 # 出身:初代真神之一
+
 元素之神
 
-掌握有无尽元素之力的原初真神,其手下的造物并不是真神一族,而是元素.元素之神创造有五大元素,风、火、水、土、暗，其中只有暗元素是唯一的，其他元素都自我繁衍的能力。元素之神对暗元素予以有无尽的期望，
+掌握有无尽元素之力的原初真神,其手下的造物并不是真神一族,而是元素.元素之神创造有五大元素,风、火、水、土、暗，其中只有暗元素是唯一的，其他元素都自我繁衍的能力。元素之神对暗元素予以有无尽的期望。作为七大原初之神中对元素感知最为敏锐的元素之神，早早地就感知到了世界外还有一片世界，他将信息告知其他原初之神后便已经开始筹划脱身计划，暗元素-艾比则是他决意要一起带走的孩子，为了让艾比不至于忍受与孩子分别的痛苦，精灵王制造艾比时禁止了其生命所必备的特质-繁衍。却不曾想这让艾比无法理解，并且最终走火入魔。精灵王不得已将之封印在元素神殿核心，并命令其他四大元素看管艾比，直至艾比从疯魔的状态中处来。而他本人则似乎追随在一个天外来客的背后。
 
 ### 重要事件
+
 #### 撕裂的封印
+
+原本的四大元素的族系是可以正常看守元素神殿的，但是不知何时起竟然有人传出元素们死亡后掉落的晶核可以成为锻造神兵的绝好材料，哪怕普通的晶核只是佩戴在身上也会有许多好处，加之晶核本身就极具美感因此无数人为此趋之若鹜，开始猎杀四大元素一族。四大元素族系的力量逐渐衰微，加之又联系不上精灵王。于是封印破碎的那一天到来了。。。好消息是艾比并不是疯魔，坏消息是艾比欲要灭绝四大元素突破自身那被禁制的枷锁。
+获得装备：混沌之息，全属性加成20% 提升自身30%的抗性.
+可以与神谕合成为 浑天甲 提升神谕属性
